# vertex-ai-templates

./: pyproject.toml  readme.md
config/: config.py
