[project]
name = "vertex-ai-templates"
version = "0.1.0"
description = ""
authors = [
    {name = "fahlevi20",email = "rozakalfi@gmal.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-genai (>=1.2.0,<2.0.0)"
]
[tool.poetry]
package-mode=false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
